# minutes

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: on-session-end.sh  pipe-to-automem.py
src/minutes/: __init__.py  cli.py  cli_batch.py  cli_process.py  config.py  dedup.py  embeddings.py  extractor.py  glossary.py  memory_pipe.py  models.py  output.py  parser.py  store.py
tests/: conftest.py  test_cli.py  test_config.py  test_dedup.py  test_extractor.py  test_glossary.py  test_memory_pipe.py  test_output.py  test_parser.py  test_pipe_to_automem.py
tests/fixtures/: sample.jsonl  sample.txt
