[project]
name = "take-minutes"
version = "0.1.0"
description = "Extract structured knowledge from conversation transcripts"
readme = "README.md"
license = "MIT"
authors = [{name = "Daniel Iser"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]

dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/danieliser/take-minutes"
Repository = "https://github.com/danieliser/take-minutes"
Issues = "https://github.com/danieliser/take-minutes/issues"

[project.optional-dependencies]
search = [
    "numpy>=2.0",
    "faiss-cpu>=1.9",
    "sentence-transformers>=2.2",
]

[dependency-groups]
dev = ["pytest>=7.0"]

[project.scripts]
minutes = "minutes.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
